Updated JUnit in the Ant

--- a/build.xml
+++ b/build.xml
@@ -5,11 +5,29 @@
               directory with the processing instruction <?eclipse.ant.import?>
               as the first entry and export the buildfile again. --><project basedir="." default="build" name="TestJavaProject">
     <property environment="env"/>
+    <property name="junit.output.dir" value="junit"/>
     <property name="debuglevel" value="source,lines,vars"/>
     <property name="target" value="1.8"/>
     <property name="source" value="1.8"/>
+    <path id="JUnit 5.libraryclasspath">
+        <pathelement location="../../../../WinApp/eclipse-java-oxygen-2-win32-x86_64/eclipse/plugins/org.junit.jupiter.api_5.0.0.v20170910-2246.jar"/>
+        <pathelement location="../../../../WinApp/eclipse-java-oxygen-2-win32-x86_64/eclipse/plugins/org.junit.jupiter.engine_5.0.0.v20170910-2246.jar"/>
+        <pathelement location="../../../../WinApp/eclipse-java-oxygen-2-win32-x86_64/eclipse/plugins/org.junit.jupiter.migrationsupport_5.0.0.v20170910-2246.jar"/>
+        <pathelement location="../../../../WinApp/eclipse-java-oxygen-2-win32-x86_64/eclipse/plugins/org.junit.jupiter.params_5.0.0.v20170910-2246.jar"/>
+        <pathelement location="../../../../WinApp/eclipse-java-oxygen-2-win32-x86_64/eclipse/plugins/org.junit.platform.commons_1.0.0.v20170910-2246.jar"/>
+        <pathelement location="../../../../WinApp/eclipse-java-oxygen-2-win32-x86_64/eclipse/plugins/org.junit.platform.engine_1.0.0.v20170910-2246.jar"/>
+        <pathelement location="../../../../WinApp/eclipse-java-oxygen-2-win32-x86_64/eclipse/plugins/org.junit.platform.launcher_1.0.0.v20170910-2246.jar"/>
+        <pathelement location="../../../../WinApp/eclipse-java-oxygen-2-win32-x86_64/eclipse/plugins/org.junit.platform.runner_1.0.0.v20170910-2246.jar"/>
+        <pathelement location="../../../../WinApp/eclipse-java-oxygen-2-win32-x86_64/eclipse/plugins/org.junit.platform.suite.api_1.0.0.v20170910-2246.jar"/>
+        <pathelement location="../../../../WinApp/eclipse-java-oxygen-2-win32-x86_64/eclipse/plugins/org.junit.vintage.engine_4.12.0.v20170910-2246.jar"/>
+        <pathelement location="../../../../WinApp/eclipse-java-oxygen-2-win32-x86_64/eclipse/plugins/org.opentest4j_1.0.0.v20170910-2246.jar"/>
+        <pathelement location="../../../../WinApp/eclipse-java-oxygen-2-win32-x86_64/eclipse/plugins/org.apiguardian_1.0.0.v20170910-2246.jar"/>
+        <pathelement location="../../../../WinApp/eclipse-java-oxygen-2-win32-x86_64/eclipse/plugins/org.junit_4.12.0.v201504281640/junit.jar"/>
+        <pathelement location="../../../../WinApp/eclipse-java-oxygen-2-win32-x86_64/eclipse/plugins/org.hamcrest.core_1.3.0.v201303031735.jar"/>
+    </path>
     <path id="TestJavaProject.classpath">
         <pathelement location="bin"/>
+        <path refid="JUnit 5.libraryclasspath"/>
     </path>
     <target name="init">
         <mkdir dir="bin"/>
@@ -52,5 +70,21 @@
             <classpath refid="TestJavaProject.classpath"/>
         </java>
     </target>
+    <target name="StudentTests">
+        <mkdir dir="${junit.output.dir}"/>
+        <junit fork="yes" printsummary="withOutAndErr">
+            <formatter type="xml"/>
+            <test name="com.babu.test.tests.StudentTests" todir="${junit.output.dir}"/>
+            <jvmarg line="-ea"/>
+            <classpath refid="TestJavaProject.classpath"/>
+        </junit>
+    </target>
+    <target name="junitreport">
+        <junitreport todir="${junit.output.dir}">
+            <fileset dir="${junit.output.dir}">
+                <include name="TEST-*.xml"/>
+            </fileset>
+            <report format="frames" todir="${junit.output.dir}"/>
+        </junitreport>
+    </target>
 </project>
-<!-- WARNING: Eclipse auto-generated file.-->
